# OpencvAndHalcon

./: CMakeLists.txt  OpencvAndHalcon.cpp  OpencvAndHalcon.h  halconConverter.h  hsvTest.cpp  hsvTest.h  thresholdTest.cpp  thresholdTest.h
OpencvAndHalcon/: CMakeLists.txt  OpencvAndHalcon.cpp  timer.h
